Revert "132. squash: fix: padding and height"
This reverts commit 0c26cdbf5fe39f31fd7fcb704f1889e79431853a.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -46,7 +46,7 @@ body {
 }
 
 body {
-  height: 100dvh;
+  height: 100vh;
   height: -webkit-fill-available;
   display: flex;
   flex-direction: column;
